syntax = "proto2";
package message;
option go_package = "initialthree/protocol/cs/message";

message teamKickPlayer_toS {
    optional uint64 kickPlayerID = 1; // 踢除的目标
}

message teamKickPlayer_toC {}